# veil-python-stack

./: .gitignore  CMakeLists.txt  HANDOFF.md  QUALITY.md  README.md  REMOTE_CHAT.md  VPN.md  WINDOWS_VM_SMOKE.md  WINDOWS_VPN.md  run_remote_server.sh
_veil_core_ext/: bindings.cpp  node.cpp  node.h
deploy/: install_linux_client.sh  install_linux_server.sh
desktop/: build_windows_client.ps1  build_windows_vpn_client.ps1  install_linux_client.py  requirements-desktop.txt  veil_chat_client.example.json  veil_chat_client.iss  veil_chat_client.py  veil_vpn_agent.py  veil_vpn_client.example.json  veil_vpn_client.py  veil_vpn_client_windows.iss  veil_vpn_ctl.py  veil_vpn_server.py  veil_vpn_server_ctl.py  veil_vpn_windows_ctl.py
examples/: example_client.py  example_server.py  linux_vpn_full_tunnel_down.sh  linux_vpn_full_tunnel_up.sh  linux_vpn_proxy.py  local_chat.py  smoke_roundtrip.py
metrics/: latest_quality_metrics.json  latest_quality_metrics_clean_release.json  latest_quality_metrics_clean_release_handshake_distribution.csv  latest_quality_metrics_clean_release_ingress_pacing_runs.csv  latest_quality_metrics_clean_release_sustained_runs.csv  latest_quality_metrics_clean_release_windowed_runs.csv
tests/: e2e_metrics.py  export_quality_metrics.py  live_linux_tun_smoke.py  live_netns_multi_client_smoke.py  live_windows_guest_multi_client_smoke.py  live_windows_vm_multi_client_smoke.py  test_client.py  test_export_quality_metrics.py  test_full_stack_e2e.py  test_linux_client_app.py  test_linux_proxy.py  test_linux_server_app.py  test_live_smoke.py  test_server.py  (+4 more)
(+16 files in other folders)
